--- a/index.html
+++ b/index.html
@@ -7,10 +7,31 @@
     <meta name="description"
         content="In this Challenge, Alejandra Vera shows us the show Once Upon a Time and why it is worth watching">
     <title>Binge-Worthy TV Show - Challenge Alejandra Vera</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <style>
+        body {
+            background-image: url("https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/557/original/slide_3.jpg?1707469457");
+            background-size: 100%;
+        }
+
+        h1 {
+            text-align: center;
+            padding: 30px;
+        }
+
+        img {
+            max-width: 70%;
+            display: block;
+            margin: 0 auto;
+        }
+    </style>
 </head>
 
 <body>
-
+    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/569/original/Once_Upon_a_Time_Logo.png?1707470784"
+        alt="">
+    <h1>Once Upon a Time</h1>
 </body>
 
 </html>
