--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <style>
+        :root {
+            --primary-color-transparent: rgb(0, 27, 27, .8);
+            --primary-color: rgb(0, 27, 27);
+        }
+
         body {
             background-image: url("https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/557/original/slide_3.jpg?1707469457");
             background-size: 100%;
         }
 
-        h1 {
-            text-align: center;
-            padding: 30px;
+        .top-logo {
+            background-color: var(--primary-color-transparent);
+            padding: 10px;
         }
 
         img {
@@ -29,9 +34,40 @@
 </head>
 
 <body>
-    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/569/original/Once_Upon_a_Time_Logo.png?1707470784"
-        alt="">
-    <h1>Once Upon a Time</h1>
+    <nav class="navbar navbar-expand-lg" style="background-color: var(--primary-color);" data-bs-theme="dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Home: Once Upon A Time</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="#">Watch Episodes</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Cast</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Photos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Favorite Scenes</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="top-logo">
+        <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/569/original/Once_Upon_a_Time_Logo.png?1707470784"
+            alt="">
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+
 </body>
 
 </html>
