--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             padding: 10px;
         }
 
-        img {
+        .logo {
             max-width: 70%;
             display: block;
             margin: 0 auto;
@@ -61,9 +61,28 @@
     </nav>
     <div class="top-logo">
         <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/569/original/Once_Upon_a_Time_Logo.png?1707470784"
-            alt="">
+            alt="Logo of Once Upone a Time" class="logo">
     </div>
-
+    <div class="container text-center">
+        <div class="row">
+            <div class="col-sm-5">
+                <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/581/original/2990d79e0110b3fddc604b1b81ebfae4.jpg?1707472987"
+                    alt="Picture of the cast in Once Upon a Time"
+                    class="img-fluid m-3 rounded shadow-sm p-2 border main-characters">
+            </div>
+            <div class="col-sm-7">
+                <div class="m-3 text-white"><p >There's a small town in Maine called Storybrooke, filled with fairytale
+                    characters who don't remember who they are. Their happily ever after has been taken away from them,
+                    and the only person who can save them is a woman called Emma Swan, who doesn't know what to believe.
+                </p>
+                <p> How did they get trapped in Storybrooke? Will Emma have the courage to believe and accept her
+                    destiny?
+                    Watch Once Upon A Time now!
+                </p>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
