Update the CSS using media queries

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         body {
             background-image: url("https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/557/original/slide_3.jpg?1707469457");
             background-size: 100%;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            font-size: 20px;
         }
 
         .top-logo {
@@ -30,6 +32,13 @@
             display: block;
             margin: 0 auto;
         }
+
+        @media (max-width: 800px) {
+            p {
+                font-size: 14px;
+            }
+        }
+
     </style>
 </head>
 
@@ -63,22 +72,25 @@
         <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/569/original/Once_Upon_a_Time_Logo.png?1707470784"
             alt="Logo of Once Upone a Time" class="logo">
     </div>
-    <div class="container text-center">
-        <div class="row">
+    <div class="text-center">
+        <div class="row align-items-center">
             <div class="col-sm-5">
                 <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/581/original/2990d79e0110b3fddc604b1b81ebfae4.jpg?1707472987"
                     alt="Picture of the cast in Once Upon a Time"
                     class="img-fluid m-3 rounded shadow-sm p-2 border main-characters">
             </div>
             <div class="col-sm-7">
-                <div class="m-3 text-white"><p >There's a small town in Maine called Storybrooke, filled with fairytale
-                    characters who don't remember who they are. Their happily ever after has been taken away from them,
-                    and the only person who can save them is a woman called Emma Swan, who doesn't know what to believe.
-                </p>
-                <p> How did they get trapped in Storybrooke? Will Emma have the courage to believe and accept her
-                    destiny?
-                    Watch Once Upon A Time now!
-                </p>
+                <div class="m-3 p-3 text-white">
+                    <p>There's a small town in Maine called Storybrooke, filled with fairytale
+                        characters who don't remember who they are. Their happily ever after has been taken away from
+                        them,
+                        and the only person who can save them is a woman called Emma Swan, who doesn't know what to
+                        believe.
+                    </p>
+                    <p> How did they get trapped in Storybrooke? Will Emma have the courage to believe and accept her
+                        destiny?
+                        Watch Once Upon A Time now!
+                    </p>
                 </div>
             </div>
         </div>
