--- a/index.html
+++ b/index.html
@@ -13,13 +13,18 @@
         :root {
             --primary-color-transparent: rgb(0, 27, 27, .8);
             --primary-color: rgb(0, 27, 27);
+            --secondary-color-transparent: rgb(19, 68, 75, .8);
         }
 
         body {
             background-image: url("https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/557/original/slide_3.jpg?1707469457");
             background-size: 100%;
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            color: white;
+        }
+
+        p {
             font-size: 20px;
+            // font-family: Verdana, Geneva, Tahoma, sans-serif;
         }
 
         .top-logo {
@@ -28,9 +33,13 @@
         }
 
         .logo {
-            max-width: 70%;
+            max-width: 60%;
             display: block;
             margin: 0 auto;
+        }
+
+        #about-ouat {
+            background-color: var(--secondary-color-transparent);
         }
 
         @media (max-width: 800px) {
@@ -39,6 +48,11 @@
             }
         }
 
+        @media (min-width: 800px) {
+            .main-characters {
+                max-width: 80%;
+            }
+        }
     </style>
 </head>
 
@@ -53,16 +67,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">Watch Episodes</a>
+                        <a class="nav-link" aria-current="page" href="#">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Cast</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Photos</a>
+                        <a class="nav-link" href="#">Photos / Favorite Scenes</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Favorite Scenes</a>
+                        <a class="nav-link" href="#">Watch Episodes</a>
                     </li>
                 </ul>
             </div>
@@ -74,12 +88,12 @@
     </div>
     <div class="text-center">
         <div class="row align-items-center">
-            <div class="col-sm-5">
+            <div class="col-sm-6">
                 <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/581/original/2990d79e0110b3fddc604b1b81ebfae4.jpg?1707472987"
                     alt="Picture of the cast in Once Upon a Time"
                     class="img-fluid m-3 rounded shadow-sm p-2 border main-characters">
             </div>
-            <div class="col-sm-7">
+            <div class="col-sm-6">
                 <div class="m-3 p-3 text-white">
                     <p>There's a small town in Maine called Storybrooke, filled with fairytale
                         characters who don't remember who they are. Their happily ever after has been taken away from
@@ -94,6 +108,39 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="m-4" id="about-ouat">
+        <h1>Once Upon a Time</h1>
+        <h3>Rotten Tomatoes: 78% | IMDb: 7.7/10</h3>
+        <p>
+        <div>
+            Once Upon a Time is an American fantasy adventure drama television series that aired for seven seasons on
+            ABC from
+            October 23, 2011, to May 18, 2018. The action alternates between two main settings: a fantastical world
+            where fairy
+            tales happen, and a fictional seaside town in Maine called Storybrooke. The "real-world" part of the story
+            unfolds with
+            the characters of Emma Swan (Jennifer Morrison) and her 10-year-old son, Henry Mills (Jared S. Gilmore).
+            Henry discovers
+            the other people of the town are fairy-tale characters. The audience is shown the backstory of the town's
+            people as
+            fairy-tale characters, in conjunction with their unfolding stories in the "real-world".
+        </div>
+        <br>
+        <div>
+            Once Upon a Time was created by Lost and Tron: Legacy writers Edward Kitsis and Adam Horowitz. The core
+            themes of the
+            show are hope and optimism. Horowitz told The Hollywood Reporter that they had a conscious purpose to "do a
+            show that
+            had optimism at its heart", as they "felt like there was so much darkness in the world". Kitsis said: "We
+            are guys who
+            like to see the world as half-full, not half-empty", and it's about "seeing that among all the trials and
+            tribulations
+            of life, you can persevere and find light among the darkness"; "it's that ability to think your life will
+            get
+            better".
+        </div>
+        </p>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
