--- a/index.html
+++ b/index.html
@@ -38,26 +38,39 @@
             margin: 0 auto;
         }
 
+        .main-characters {
+            max-width: 70%;
+        }
+
+        .second-picture {
+            max-width: 50%;
+        }
+
         #about-ouat {
             background-color: var(--secondary-color-transparent);
+        }
+
+        .cast-character {
+            width: 100px;
         }
 
         @media (max-width: 800px) {
             p {
                 font-size: 14px;
             }
-        }
 
-        @media (min-width: 800px) {
             .main-characters {
-                max-width: 80%;
+                max-width: 70%;
             }
+
+            .second-picture {
+                max-width: 70%;
+            }
+
         }
     </style>
-</head>
-
-<body>
-    <nav class="navbar navbar-expand-lg" style="background-color: var(--primary-color);" data-bs-theme="dark">
+    <nav class="navbar navbar-expand-lg" style="background-color: var(--primary-color-transparent);"
+        data-bs-theme="dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Home: Once Upon A Time</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -82,6 +95,10 @@
             </div>
         </div>
     </nav>
+</head>
+
+<body>
+
     <div class="top-logo">
         <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/569/original/Once_Upon_a_Time_Logo.png?1707470784"
             alt="Logo of Once Upone a Time" class="logo">
@@ -94,7 +111,7 @@
                     class="img-fluid m-3 rounded shadow-sm p-2 border main-characters">
             </div>
             <div class="col-sm-6">
-                <div class="m-3 p-3 text-white">
+                <div class="m-2 p-2 text-white">
                     <p>There's a small town in Maine called Storybrooke, filled with fairytale
                         characters who don't remember who they are. Their happily ever after has been taken away from
                         them,
@@ -112,35 +129,110 @@
     <div class="m-4" id="about-ouat">
         <h1>Once Upon a Time</h1>
         <h3>Rotten Tomatoes: 78% | IMDb: 7.7/10</h3>
-        <p>
         <div>
-            Once Upon a Time is an American fantasy adventure drama television series that aired for seven seasons on
-            ABC from
-            October 23, 2011, to May 18, 2018. The action alternates between two main settings: a fantastical world
-            where fairy
-            tales happen, and a fictional seaside town in Maine called Storybrooke. The "real-world" part of the story
-            unfolds with
-            the characters of Emma Swan (Jennifer Morrison) and her 10-year-old son, Henry Mills (Jared S. Gilmore).
-            Henry discovers
-            the other people of the town are fairy-tale characters. The audience is shown the backstory of the town's
-            people as
-            fairy-tale characters, in conjunction with their unfolding stories in the "real-world".
+            <p>
+                Once Upon a Time is an American fantasy adventure drama television series that aired for seven seasons
+                on
+                ABC from
+                October 23, 2011, to May 18, 2018. The action alternates between two main settings: a fantastical world
+                where fairy
+                tales happen, and a fictional seaside town in Maine called Storybrooke. The "real-world" part of the
+                story
+                unfolds with
+                the characters of Emma Swan (Jennifer Morrison) and her 10-year-old son, Henry Mills (Jared S. Gilmore).
+                Henry discovers
+                the other people of the town are fairy-tale characters. The audience is shown the backstory of the
+                town's
+                people as
+                fairy-tale characters, in conjunction with their unfolding stories in the "real-world".
+            </p>
         </div>
-        <br>
         <div>
-            Once Upon a Time was created by Lost and Tron: Legacy writers Edward Kitsis and Adam Horowitz. The core
-            themes of the
-            show are hope and optimism. Horowitz told The Hollywood Reporter that they had a conscious purpose to "do a
-            show that
-            had optimism at its heart", as they "felt like there was so much darkness in the world". Kitsis said: "We
-            are guys who
-            like to see the world as half-full, not half-empty", and it's about "seeing that among all the trials and
-            tribulations
-            of life, you can persevere and find light among the darkness"; "it's that ability to think your life will
-            get
-            better".
+            <p> Once Upon a Time was created by Lost and Tron: Legacy writers Edward Kitsis and Adam Horowitz. The core
+                themes of the
+                show are hope and optimism. Horowitz told The Hollywood Reporter that they had a conscious purpose to
+                "do a
+                show that
+                had optimism at its heart", as they "felt like there was so much darkness in the world". Kitsis said:
+                "We
+                are guys who
+                like to see the world as half-full, not half-empty", and it's about "seeing that among all the trials
+                and
+                tribulations
+                of life, you can persevere and find light among the darkness"; "it's that ability to think your life
+                will
+                get
+                better".
+            </p>
         </div>
-        </p>
+    </div>
+    <div class="text-center"><img
+            src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/556/original/once_upon_a_time.jpg?1707469202"
+            alt="" class="img-fluid m-3 rounded shadow-sm second-picture border">
+    </div>
+    <div class="m-4 cast">
+        <h1>Cast: Main Characters</h1>
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-sm-2">
+                    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/589/original/jennifer-morrison.jpeg?1707478147"
+                        alt="" class="img-fluid border rounded cast-character">
+                </div>
+                <div class="col-sm-2">
+                    <strong>Jennifer Morrison</strong>
+                    <br>
+                    Emma Swan
+                </div>
+                <div class="col-sm-2">
+                    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/590/original/lana-parrilla.jpeg?1707478155"
+                        alt="" class="img-fluid border rounded cast-character">
+                </div>
+                <div class="col-sm-2">
+                    <strong>Lana Parrilla</strong>
+                    <br>
+                    Evil Queen
+                </div>
+                <div class="col-sm-2">
+                    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/592/original/ginnifer-goodwin.jpeg?1707478168"
+                        alt="" class="img-fluid border rounded cast-character">
+                </div>
+                <div class="col-sm-2">
+                    <strong>Ginnifer Goodwin</strong>
+                    <br>
+                    Snowhite
+                </div>
+            </div>
+            <br>
+            <div class="row align-items-center">
+                <div class="col-sm-2">
+                    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/591/original/joshua-dallas.jpeg?1707478161"
+                        alt="" class="img-fluid border rounded cast-character">
+                </div>
+                <div class="col-sm-2">
+                    <strong>Joshua Dallas</strong>
+                    <br>
+                    Prince Charming
+                </div>
+                <div class="col-sm-2">
+                    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/594/original/robert-carlyle.jpeg?1707478193"
+                        alt="" class="img-fluid border rounded cast-character">
+                </div>
+                <div class="col-sm-2">
+                    <strong>Roberty Carlyle</strong>
+                    <br>
+                    Mr. Gold
+                </div>
+                <div class="col-sm-2">
+                    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/593/original/jared-s-gilmore.jpeg?1707478178"
+                        alt="" class="img-fluid border rounded cast-character">
+                </div>
+                <div class="col-sm-2">
+                    <strong>Jared S. Gilmore</strong>
+                    <br>
+                    Henry Mills
+                </div>
+            </div>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
