--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
             background-color: var(--secondary-color-transparent);
         }
 
+        .cast {
+            background-color: var(--primary-color-transparent);
+            padding: 10px;
+        }
         .cast-character {
             width: 100px;
         }
@@ -234,6 +238,7 @@
             </div>
         </div>
     </div>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
