--- a/index.html
+++ b/index.html
@@ -71,6 +71,19 @@
             scroll-snap-align: center;
         }
 
+        .video {
+            text-align: center;
+        }
+
+        a {
+            text-decoration: none;
+            color: white;
+        }
+
+        .watch-button {
+            background-color: var(--secondary-color-transparent);
+        }
+
         @media (max-width: 800px) {
             p {
                 font-size: 14px;
@@ -272,6 +285,23 @@
                         alt="" class="img-fluid item">
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="m-4 watch">
+        <h1>Watch Episodes</h1>
+        <p>You can find all 7 seasons of Once Upon A Time on <a href="https://www.disneyplus.com/home">Disney Plus</a>
+        </p>
+        <div class="embed-responsive embed-responsive-16by9 video">
+            <iframe class="embed-responsive-item" width="560" height="315"
+                src="https://www.youtube.com/embed/29217uc7fOo?si=_uam_8-PjN0PELpz" title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+        </div>
+        <div class="button text-center">
+            <button type="button" class="btn btn-outline-success btn-lg m-4 border watch-button"><a
+                    href="https://www.disneyplus.com/series/once-upon-a-time/14p4BXYA2xok">Watch Once Upon A Time on
+                    Disney+</a></button>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
