--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
         }
     </style>
-    <nav class="navbar navbar-expand-lg" style="background-color: var(--primary-color-transparent);"
+    <nav class="navbar navbar-expand-lg sticky-top" style="background-color: var(--primary-color-transparent);"
         data-bs-theme="dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Home: Once Upon A Time</a>
