--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <nav class="navbar navbar-expand-lg sticky-top" style="background-color: var(--primary-color-transparent);"
         data-bs-theme="dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Home: Once Upon A Time</a>
+            <a class="navbar-brand" href="#home">Home: Once Upon A Time</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -133,16 +133,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">About</a>
+                        <a class="nav-link" aria-current="page" href="#about-ouat">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Cast</a>
+                        <a class="nav-link" href="#cast">Cast</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Photos of the Show</a>
+                        <a class="nav-link" href="#photos">Photos of the Show</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Watch Episodes</a>
+                        <a class="nav-link" href="#watch">Watch Episodes</a>
                     </li>
                 </ul>
             </div>
@@ -152,7 +152,7 @@
 
 <body>
 
-    <div class="top-logo">
+    <div class="top-logo" id="home">
         <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/569/original/Once_Upon_a_Time_Logo.png?1707470784"
             alt="Logo of Once Upone a Time" class="logo">
     </div>
@@ -232,7 +232,7 @@
                 src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/556/original/once_upon_a_time.jpg?1707469202"
                 alt="" class="img-fluid m-3 rounded shadow-sm second-picture border">
         </div>
-        <div class="m-4">
+        <div class="m-4" id="cast">
             <h1>Cast: Main Characters</h1>
             <div class="container cast p-4">
                 <div class="row align-items-center">
@@ -296,7 +296,7 @@
                 </div>
             </div>
         </div>
-        <div class="m-4">
+        <div class="m-4" id="photos">
             <h1>Photos of the Show</h1>
             <div class="container">
                 <div class="photos">
@@ -319,7 +319,7 @@
                 </div>
             </div>
         </div>
-        <div class="m-4">
+        <div class="m-4" id="watch">
             <h1>Watch Episodes</h1>
             <div class="watch p-4">
                 <p>You can find all 7 seasons of Once Upon A Time on <a href="https://www.disneyplus.com/home"
