--- a/index.html
+++ b/index.html
@@ -91,9 +91,14 @@
             text-align: center;
         }
 
-        button a {
+        button a,
+        .characters-profiles a {
             text-decoration: none;
             color: white;
+        }
+
+        .characters-profiles a:hoover {
+            cursor: pointer;
         }
 
         .watch-button {
@@ -246,25 +251,27 @@
                 src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/556/original/once_upon_a_time.jpg?1707469202"
                 alt="" class="img-fluid m-3 rounded shadow-sm second-picture border">
         </div>
-        <div class="m-4 pt-5" id="cast">
+        <div class="m-4 pt-5 characters-profiles" id="cast">
             <h1>Cast: Main Characters</h1>
             <div class="container cast p-4">
-                <div class="row align-items-center">
+                <div class="row align-items-center characters-profiles">
                     <div class="col-sm-2">
                         <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/589/original/jennifer-morrison.jpeg?1707478147"
                             alt="" class="img-fluid border rounded cast-character">
                     </div>
-                    <div class="col-sm-2 mb-4">
-                        <strong>Jennifer Morrison</strong>
+                    <div class="col-sm-2 mb-4 ">
+                        <a href="https://www.imdb.com/name/nm0607185/" target="_blank">
+                        <strong>Jennifer Morrison</strong></a>
                         <br>
                         Emma Swan
+                        <br>
                     </div>
                     <div class="col-sm-2">
                         <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/590/original/lana-parrilla.jpeg?1707478155"
                             alt="" class="img-fluid border rounded cast-character">
                     </div>
                     <div class="col-sm-2 mb-4">
-                        <strong>Lana Parrilla</strong>
+                        <a href="https://www.imdb.com/name/nm0663469/?ref_=fn_al_nm_1" target="_blank"><strong>Lana Parrilla</strong></a>
                         <br>
                         Evil Queen
                     </div>
@@ -273,7 +280,7 @@
                             alt="" class="img-fluid border rounded cast-character">
                     </div>
                     <div class="col-sm-2">
-                        <strong>Ginnifer Goodwin</strong>
+                        <a href="https://www.imdb.com/name/nm0329481/?ref_=nv_sr_srsg_1_tt_0_nm_7_q_Ginnifer%2520" target="_blank"><strong>Ginnifer Goodwin</strong></a>
                         <br>
                         Snowhite
                     </div>
@@ -285,7 +292,7 @@
                             alt="" class="img-fluid border rounded cast-character">
                     </div>
                     <div class="col-sm-2 mb-4">
-                        <strong>Joshua Dallas</strong>
+                        <a href="https://www.imdb.com/name/nm2796047/?ref_=nv_sr_srsg_0_tt_0_nm_8_q_Joshua%2520Dalas" target="_blank"><strong>Joshua Dallas</strong></a>
                         <br>
                         Prince Charming
                     </div>
@@ -294,7 +301,7 @@
                             alt="" class="img-fluid border rounded cast-character">
                     </div>
                     <div class="col-sm-2 mb-4">
-                        <strong>Roberty Carlyle</strong>
+                        <a href="https://www.imdb.com/name/nm0001015/?ref_=nv_sr_srsg_0_tt_0_nm_8_q_robert%2520carl" target="_blank"><strong>Robert Carlyle</strong></a>
                         <br>
                         Mr. Gold
                     </div>
@@ -303,7 +310,7 @@
                             alt="" class="img-fluid border rounded cast-character">
                     </div>
                     <div class="col-sm-2 mb-4">
-                        <strong>Jared S. Gilmore</strong>
+                        <a href="https://www.imdb.com/name/nm2765519/?ref_=nv_sr_srsg_0_tt_0_nm_2_q_jared%2520s%2520gilmore" target="_blank"><strong>Jared S. Gilmore</strong></a>
                         <br>
                         Henry Mills
                     </div>
