Add descriptions to the images in the carousel slide

--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@
             scroll-snap-align: center;
         }
 
-        #about-ouat,
-        .photos {
+        #about-ouat {
             background-color: var(--secondary-color-transparent);
             padding: 20px;
             border-radius: 10px;
@@ -201,7 +200,7 @@
                 </div>
             </div>
         </div>
-        <div class="m-4 p-4 pt-5" id="about-section">
+        <div class="m-4 pb-4 pl-4 pr-4 pt-5" id="about-section">
             <h1>Once Upon a Time</h1>
             <h3>Rotten Tomatoes: 78% | IMDb: 7.7/10</h3>
             <div id="about-ouat">
@@ -341,56 +340,49 @@
                         <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/630/original/once_upon_a_time-2.jpg?1707485504"
                             class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>First slide label</h5>
-                            <p>Some representative placeholder content for the first slide.</p>
+                            <p>Snowhite and the Evil Queen</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/629/original/MV5BMTQ4MTgyNTM0NV5BMl5BanBnXkFtZTcwMDcwNDQ5Ng__._V1_.jpg?1707485494"
                             class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Second slide label</h5>
-                            <p>Some representative placeholder content for the second slide.</p>
+                            <p>Prince Charming breaks the spell</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/627/original/rsz_13.jpg?1707485457"
                             class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Third slide label</h5>
-                            <p>Some representative placeholder content for the third slide.</p>
+                            <p>Famous Villains</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/626/original/robbie-kay-in-emonce-upon-a-timeem.jpg?1707485449"
                             class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Fourth slide label</h5>
-                            <p>Some representative placeholder content for the third slide.</p>
+                            <p>Peter Pan with Captain Hook</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/624/original/descarga.jpeg?1707485422"
                             class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Fifth slide label</h5>
-                            <p>Some representative placeholder content for the third slide.</p>
+                            <p>Snowhite, Prince Charming and the dwarfs</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/622/original/17731395183_300476f7a3_o.jpg?1707485410"
                             class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Sixth slide label</h5>
-                            <p>Some representative placeholder content for the third slide.</p>
+                            <p>Robin Hood's wedding</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/620/original/4x11_Belle_table_histoire_monde_Rumplestiltskin.jpg?1707485401"
                             class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Seventh slide label</h5>
-                            <p>Some representative placeholder content for the third slide.</p>
+                            <p>Beauty and the Beast</p>
                         </div>
                     </div>
 
