Add did you know section to the html and to the navbar

--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
             scroll-snap-align: center;
         }
 
-        #about-ouat {
+        #about-ouat,
+        .curiosities {
             background-color: var(--secondary-color-transparent);
             padding: 20px;
             border-radius: 10px;
@@ -161,8 +162,12 @@
                         <a class="nav-link" href="#photos">Photos of the Show</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="#did-you-know">Did you know?</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#watch">Watch Episodes</a>
                     </li>
+                    
                 </ul>
             </div>
         </div>
@@ -260,7 +265,7 @@
                     </div>
                     <div class="col-sm-2 mb-4 ">
                         <a href="https://www.imdb.com/name/nm0607185/" target="_blank">
-                        <strong>Jennifer Morrison</strong></a>
+                            <strong>Jennifer Morrison</strong></a>
                         <br>
                         Emma Swan
                         <br>
@@ -270,7 +275,8 @@
                             alt="" class="img-fluid border rounded cast-character">
                     </div>
                     <div class="col-sm-2 mb-4">
-                        <a href="https://www.imdb.com/name/nm0663469/?ref_=fn_al_nm_1" target="_blank"><strong>Lana Parrilla</strong></a>
+                        <a href="https://www.imdb.com/name/nm0663469/?ref_=fn_al_nm_1" target="_blank"><strong>Lana
+                                Parrilla</strong></a>
                         <br>
                         Evil Queen
                     </div>
@@ -279,7 +285,8 @@
                             alt="" class="img-fluid border rounded cast-character">
                     </div>
                     <div class="col-sm-2">
-                        <a href="https://www.imdb.com/name/nm0329481/?ref_=nv_sr_srsg_1_tt_0_nm_7_q_Ginnifer%2520" target="_blank"><strong>Ginnifer Goodwin</strong></a>
+                        <a href="https://www.imdb.com/name/nm0329481/?ref_=nv_sr_srsg_1_tt_0_nm_7_q_Ginnifer%2520"
+                            target="_blank"><strong>Ginnifer Goodwin</strong></a>
                         <br>
                         Snowhite
                     </div>
@@ -291,7 +298,8 @@
                             alt="" class="img-fluid border rounded cast-character">
                     </div>
                     <div class="col-sm-2 mb-4">
-                        <a href="https://www.imdb.com/name/nm2796047/?ref_=nv_sr_srsg_0_tt_0_nm_8_q_Joshua%2520Dalas" target="_blank"><strong>Joshua Dallas</strong></a>
+                        <a href="https://www.imdb.com/name/nm2796047/?ref_=nv_sr_srsg_0_tt_0_nm_8_q_Joshua%2520Dalas"
+                            target="_blank"><strong>Joshua Dallas</strong></a>
                         <br>
                         Prince Charming
                     </div>
@@ -300,7 +308,8 @@
                             alt="" class="img-fluid border rounded cast-character">
                     </div>
                     <div class="col-sm-2 mb-4">
-                        <a href="https://www.imdb.com/name/nm0001015/?ref_=nv_sr_srsg_0_tt_0_nm_8_q_robert%2520carl" target="_blank"><strong>Robert Carlyle</strong></a>
+                        <a href="https://www.imdb.com/name/nm0001015/?ref_=nv_sr_srsg_0_tt_0_nm_8_q_robert%2520carl"
+                            target="_blank"><strong>Robert Carlyle</strong></a>
                         <br>
                         Mr. Gold
                     </div>
@@ -309,7 +318,8 @@
                             alt="" class="img-fluid border rounded cast-character">
                     </div>
                     <div class="col-sm-2 mb-4">
-                        <a href="https://www.imdb.com/name/nm2765519/?ref_=nv_sr_srsg_0_tt_0_nm_2_q_jared%2520s%2520gilmore" target="_blank"><strong>Jared S. Gilmore</strong></a>
+                        <a href="https://www.imdb.com/name/nm2765519/?ref_=nv_sr_srsg_0_tt_0_nm_2_q_jared%2520s%2520gilmore"
+                            target="_blank"><strong>Jared S. Gilmore</strong></a>
                         <br>
                         Henry Mills
                     </div>
@@ -399,6 +409,65 @@
                 </button>
             </div>
         </div>
+        <div class="m-4 pt-5" id="did-you-know">
+            <h1>Did you know...?</h1>
+            <div class="m-3 curiosities">
+                Josh Dallas (Prince Charming) and Ginnifer Goodwin (Snow White) went on to marry in real life.
+            </div>
+            <div class="m-3 curiosities">
+                Most of the objects in Mr. Golds were brought in by the cast.
+            </div>
+            <div class="m-3 curiosities">
+                Several times during the series, Mr. Gold is seen wearing a wedding ring. This is because Robert Carlyle
+                has
+                forgotten
+                to remove his own ring; he has even tweeted about it.
+            </div>
+            <div class="m-3 curiosities">
+                Of all of the Prince and Princess couples that could have been the focal point of the series, Snow White
+                and Prince
+                Charming were chosen, because of Snow White and the Seven Dwarfs (1937) being the first movie Disney
+                produced.
+            </div>
+            <div class="m-3 curiosities">
+                The creators formally offered the part of the Blue Fairy, a.k.a. Mother Superior to singer Lady Gaga. However, according
+                to Edward Kitsis, they never heard back from her management staff. The part then went to Keegan Connor Tracy.
+            </div>
+            <div class="m-3 curiosities">
+                Names for many characters in Storybrooke are often coordinated with their fairy tale counterpart. For
+                example:
+                <ul>
+                    <li class="m-2">Mary Margaret Blanchard (Snow White): Blanchard derives from the French word "blanc"
+                        or "blanche" for white. The name
+                        "Mary Margaret" is from a real-life woman believed to be the inspiration of the Snow White
+                        character named "Maria Sophia
+                        Margaretha Catharina Freifräulein Von Erthal" (born on June 15, 1729 in Germany).</li>
+                    <li class="m-2">Regina Mills (Evil Queen): Regina is a Late Latin and Modern Italian feminine noun
+                        and name meaning "queen". Regina's
+                        grandfather was a Miller so that is a connection to her last name.</li>
+                    <li class="m-2">David Nolan (Prince Charming): The masculine name David means "darling" or
+                        "beloved." In Biblical text, it is also the
+                        name of the shepherd who became King David after defeating the Goliath the giant. Nolan is a
+                        Gaelic name meaning
+                        "noble," "fighter," or "champion."</li>
+                    <li class="m-2">Mr. Gold (Rumpelstiltskin): Rumpelstiltskin spun straw into gold in his story.</li>
+                    <li class="m-2">Ruby (Red Riding Hood): A ruby is a pink to blood-red colored gemstone.</li>
+                    <li class="m-2">Ashley Boyd (Cinderella): Cinders precede ashes in the burning process. Also,
+                        Cinderella was originally called
+                        Ashputtel. Boyd derives from the Gaelic word "buidhe" meaning yellow-haired.</li>
+                    <li class="m-2">Sidney Glass (Mirror): Because another word for mirror is glass or looking glass.
+                        Also, his newspaper is called "The
+                        Mirror." Sidney's character as the Queen's minion trapped in a mirror parallels a genie trapped
+                        in a bottle/lamp as a
+                        master's servant. The name Sidney refers to Sidney Sheldon, the creator of I Dream of Jeannie
+                        (1965).</li>
+                    <li class="m-2">Archie Hopper (Jiminy Cricket): Crickets are sometimes called hoppers, because they
+                        hop to get around. "Archie" could
+                        also allude to the cockroach poet created in 1916 by Don Marquis.</li>
+                    </li>
+                </ul>
+            </div>
+        </div>
         <div class="m-4 pt-5" id="watch">
             <h1>Watch Episodes</h1>
             <div class="watch p-4">
@@ -421,6 +490,7 @@
                         Disney+</a></button>
             </div>
         </div>
+
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
